--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" >
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Picture of a chill lion">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Picture of a chill lion" title="So sleepy...">
 
 </body>
 </html>
