--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
-
+  <img src="https://cdn11.bigcommerce.com/s-oqm1pc/images/stencil/631x631/products/2965/7892/albuca_spiralis_frizzle_sizzle__95012.1551992127.jpg?c=2">
+  <img src="https://cdn11.bigcommerce.com/s-oqm1pc/images/stencil/631x631/products/2965/7892/albuca_spiralis_frizzle_sizzle__95012.1551992127.jpg?c=2" alt="Albuca spiralis 'Frizzle Sizzle'">
+  <img src="https://cdn11.bigcommerce.com/s-oqm1pc/images/stencil/631x631/products/2965/7892/albuca_spiralis_frizzle_sizzle__95012.1551992127.jpg?c=2" alt="Albuca spiralis 'Frizzle Sizzle'" title="Succlent Picture">
 </body>
 </html>
