--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"> 
+
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion roaring in grass"> 
+
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion raoring in grass" title="Lion roars"> 
 
 </body>
 </html>
